--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,20 +16,24 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_card_swipper: ^0.4.0
   http: ^0.13.3
-  flutter_launcher_icons: ^0.7.4
-  flutter_launcher_name: ^0.0.1
+  google_fonts: ^2.1.0
+  fluttericon: ^2.0.0
+  flutter_boxicons: ^3.0.0
+  
 
-flutter_icons:
-  image_path: 'assets/logo.png'
-  android: true
-  ios: true
+# flutter_icons:
+#   image_path: 'assets/logo.png'
+#   android: true
+#   ios: true
 
-flutter_launcher_name:
-  name: "The Movie DB"
+# flutter_launcher_name:
+#   name: "The Movie DB"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # flutter_launcher_icons: ^0.7.4
+  # flutter_launcher_name: ^0.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
