--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   fluttericon: ^2.0.0
   flutter_boxicons: ^3.0.0
   rxdart: ^0.27.1
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  firebase_analytics: "^8.1.2"
+  firebase_app_check: ^0.0.1+2
   
 
 # flutter_icons:
