--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   cupertino_icons: ^1.0.2
-  firebase_analytics: "^8.1.2"
+  custom_navigation_bar: ^0.8.2
+  firebase_analytics: ^8.1.2
   firebase_app_check: ^0.0.1+2
   firebase_auth: ^1.4.1
   firebase_core: ^1.3.0
+  flutter:
+    sdk: flutter
   flutter_boxicons: ^3.0.0
   flutter_card_swipper: ^0.4.0
   fluttericon: ^2.0.0
