--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,20 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   custom_navigation_bar: ^0.8.2
-  firebase_analytics: ^8.1.2
-  firebase_app_check: ^0.0.1+2
-  firebase_auth: ^1.4.1
-  firebase_core: ^1.3.0
+  firebase_analytics: ^8.3.4
+  firebase_app_check: ^0.0.3
+  firebase_auth: ^3.2.0
+  firebase_core: ^1.10.0
   flutter:
     sdk: flutter
   flutter_boxicons: ^3.0.0
   flutter_card_swipper: ^0.4.0
   fluttericon: ^2.0.0
   google_fonts: ^2.1.0
-  http: ^0.13.3
-  rxdart: ^0.27.1
+  http: ^0.13.4
+  rxdart: ^0.27.3
 
 # flutter_icons:
 #   image_path: 'assets/logo.png'
